# notion-extensions

./: .gitignore  README.md  pyproject.toml
examples/: settings.toml
scratch/: notion_api.py
src/notion_extensions/: config.py
src/notion_extensions/schedule_automation/: update.py
src/notion_extensions/utils/: date.py  dicts.py  notion.py  pauses.py  selenium.py
test/: test_date.py
